<resources>

    <string name="app_name">PAPP</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <integer name="slide_animation_duration">600</integer>


    <string name="com.stripe.publishable_key">pk_live_trW9snyQp72gtgkbeHhAgeN1</string>

    <string name="about">About</string>
    <string name="hint_username">Name</string>
    <string name="login_success">login success</string>
    <string name="go">GO</string>
    <string name="next">NEXT</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">REGISTER</string>

    <string name="enable_gps">GPS is not Enabled!</string>
    <string name="enable_gps_info">Do you want to turn on GPS?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="access_code">Access Code</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>

    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend SMS</string>
    <!-- strip -->
    <string name="change_card">Change details</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="completing_purchase">Completing purchase&#8230;</string>
    <string name="enter_details">Enter card details</string>
    <string name="enter_shipping_details">Enter shipping details</string>
    <string name="purchase_successful">Your purchase was a success!</string>
    <string name="total">Total</string>
    <string name="or">or</string>
    <string name="display_ending_in">" ending in "</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Pet Shope</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Create account</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>

    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="forgot_password_msg2">You will recieve a link to setup a new password</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mykaymap">AIzaSyBfqQbugujFYE64OahcyHhydLfDd6ULVRM</string>
    <string name="title_activity_set_location">Map</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verivfy_number">Verification Code</string>
    <string name="create_account">Create Account</string>
    <string name="add_catigories">Selecte a category</string>
    <string name="pet_details">View Details</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="language">Change Language</string>

    <string name="data_add_successfully">Data Added Successfully</string>
    <string name="putdata">please put Type </string>
    <string name="dontletthisempty">don\'t let  this empty</string>
    <string name="name">name</string>
    <string name="type">type</string>
    <string name="upload">Uploaded</string>
    <string name="fileuploaded">File Uploaded</string>
    <string name="uploading">Uploading</string>
    <string name="available_pets">Available Pets</string>
    <string name="available_products">Available Products</string>
    <string name="available_serice">Available Services</string>
    <string name="add">Add  </string>
    <string name="add_image">Add Photos</string>
    <string name="weekdays">WEEK DAYS</string>
    <string name="numberphone">enter mobile number with country code</string>
    <string name="enter_number">Please type the verification code sent to</string>

</resources>
