<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Auth_Activities.LoginActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@mipmap/loginimage"
        android:gravity="center"
        android:orientation="vertical"
        >
        <EditText
                android:layout_marginTop="90dp"
                android:background="@drawable/buttonshape"
                android:id="@+id/email"
                android:textAlignment="textStart"
                android:paddingLeft="15dp"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
            <EditText
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonshape"
                android:paddingLeft="15dp"
                android:id="@+id/password"
                android:layout_width="230dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_gravity="left"
                android:textSize="8dp"
                android:id="@+id/btn_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:layout_marginRight="10dp" />
            <CheckBox
                android:id="@+id/rememberMe"
                android:textSize="8dp"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="Remember me"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <!-- Login Button -->
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_login"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:background="@drawable/buttonshapelogin"
            android:text="@string/btn_login"
            android:textColor="@android:color/white" />
        <Button
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:background="@drawable/buttonshaperegister"
            android:id="@+id/btn_signup"
            android:layout_marginTop="10dp"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="14dp" />
        <!-- Link to Login Screen -->
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
