<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Auth_Activities.LoginActivity">
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
            <EditText
                android:id="@+id/username"
                android:hint="Username"
                android:inputType="textEmailAddress"
                style="@style/RegisterStyle"
               />
            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/RegisterStyle"
                />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_mobile_verification_country_flag"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/circle_gray"
                android:padding="2dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_in"/>
            <LinearLayout

                android:background="@drawable/buttonshape"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_mobile_verification_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_vertical"
                android:minHeight="45dp"
                android:minWidth="60dp"
                android:theme="@style/SpinnerStyle"/>

            <EditText
                android:id="@+id/etxt_mobile_verification_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="enter your number"
                android:inputType="phone"
                android:minHeight="45dp"
                android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:visibility="gone"
                android:textSize="12dp"
                android:id="@+id/phonenumber"
                android:hint="@string/numberphone"
                android:inputType="phone"
                style="@style/RegisterStyle"
                />
            <EditText
                android:id="@+id/password"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                style="@style/RegisterStyle" />

            <EditText
                android:id="@+id/cpassword"
                android:focusableInTouchMode="true"
                android:hint="Confirm Password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                style="@style/RegisterStyle" />

        <CheckBox
            android:id="@+id/check_conditions"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="I agree to the terms and conditions."
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an Account ?"
                />
            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:id="@+id/sign_in_button"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textAllCaps="false"
                android:textSize="16dp" />
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/sign_up_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/arrow_right_wait"
            />
        <Button
          android:visibility="gone"
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />
        <!-- Link to Login Screen -->
</LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
