<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageView
                android:scaleType="fitXY"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/verifybynumber"
                />
            <TextView
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/title_text"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please type the verification code sent to "
                android:textSize="16sp" />

            <EditText
                android:textSize="16sp"
                android:background="@drawable/buttonshape"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:id="@+id/field_phone_number"
                android:hint="@string/numberphone"
                android:inputType="phone" />
            <EditText
                android:visibility="gone"
                android:id="@+id/field_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_verification_code"
                android:inputType="number" />
            <Button
                android:visibility="gone"
                android:id="@+id/button_start_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/start_phone_auth"
                />
            <Button
                android:visibility="gone"
                android:id="@+id/button_verify_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_phone_auth" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/field_1"
                    style="@style/fields_verify"
                    />
                <EditText
                    android:id="@+id/field_2"
                    style="@style/fields_verify"
                    />
                <EditText
                    android:id="@+id/field_3"
                    style="@style/fields_verify"
                    />
                <EditText
                    android:id="@+id/field_4"
                    style="@style/fields_verify"
                    />
                <EditText
                    android:id="@+id/field_5"
                    style="@style/fields_verify"
                    />
                <EditText
                    android:id="@+id/field_6"
                    style="@style/fields_verify"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Did not receive a code ?"
                    />
                <TextView
                    android:id="@+id/button_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Resend a SMS"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/keyboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TableRow>
                    <Button
                        android:id="@+id/key_7"
                        android:text="7"
                        style="@style/Number_Keys"
                        />
                    <Button
                        android:id="@+id/key_8"
                        android:text="8"
                        style="@style/Number_Keys"
                        />
                    <Button
                        android:id="@+id/key_9"
                        android:text="9"
                        style="@style/Number_Keys"
                        />
                </TableRow>
                <TableRow>
                    <Button
                        android:id="@+id/key_4"
                        android:text="4"
                        style="@style/Number_Keys"
                        />
                    <Button
                        android:id="@+id/key_5"
                        android:text="5"
                        style="@style/Number_Keys"
                        />
                    <Button
                        android:id="@+id/key_6"
                        android:text="6"
                        style="@style/Number_Keys"
                        />

                </TableRow><TableRow>
                <Button
                    android:id="@+id/key_1"
                    android:text="1"
                    style="@style/Number_Keys"
                    />
                <Button
                    android:id="@+id/key_2"
                    android:text="2"
                    style="@style/Number_Keys"
                    />
                <Button
                    android:id="@+id/key_3"
                    android:text="3"
                    style="@style/Number_Keys"
                    />
            </TableRow>
                <TableRow>
                <Button
                    style="@style/Number_Keys"
                    />
                <Button
                    android:id="@+id/key_0"
                    android:text="0"
                    style="@style/Number_Keys"
                    />
                <Button
                    android:layout_width="20sp"
                    android:layout_height="30sp"
                    android:background="@drawable/clear_number"
                    android:id="@+id/key_clean"
                    />
            </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>